# HJReflection

./: .gitignore  CMakeLists.txt  HJTest.cpp  HJTest.generated.h  HJTest.h  LICENSE  main.cpp  readme.md  todo.md
HJReflection/: CMakeLists.txt
HJReflection/include/: HJClass.h  HJObject.h  HJVariant.h
HJReflection/src/: HJClass.cpp  HJObject.cpp  HJVariant.cpp
HJReflectionTool/: CMakeLists.txt  HJReflectionTool.cpp  HJReflectionTool.h  HJReflectionToolEntry.cpp
